# clerk

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  requirements.txt  setup.cfg
.github/workflows/: publish-package.yml  python-package.yml
clerk/: __init__.py  app.py  config.py  parse.py
my_journal/: app.py
src/: .app.py.swp  app.py  config.py  parse.py
src/clerk/: app.py  config.py
tests/: app_test.py  config_test.py  parse_test.py
