[metadata]
name = josephhaaga-clerk
version = 0.0.8
author = Joseph Haaga
author_email = haaga.joe@gmail.com
description = A CLI to manage daily journal entries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/josephhaaga/clerk
project_urls =
    Bug Tracker = https://github.com/josephhaaga/clerk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    appdirs==1.4.4
    word2number==1.1
packages = find_namespace:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    journal = clerk.app:main

[options.packages.find]
exclude =
    build*
    dist*
    tests*
    venv*

[tool:interrogate]
exclude = setup.py,venv
